tests/fail/semantic/product_undefined_variable.cyt
record Value(val: int)

rule [a: Value] -> Value(val: b.val)

rule [a: Value] -> Value(val: a.val) // this is valid

// args: --no-colour

// expected stderr:
// error: undefined variable `b`
//   ┌─ ../tests/fail/semantic/product_undefined_variable.cyt:3:31
//   │
// 3 │ rule [a: Value] -> Value(val: b.val)
//   │                               ^ undefined variable